Fixing flatbuffers error

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -35,9 +35,9 @@ find_package(Threads REQUIRED)
 link_directories(/root/grpc/install/lib/)
 
 add_executable(bond_request ${BOND_REQUEST_SORUCES})
-add_executable(async_client ${ASYNC_SOURCES})
+# add_executable(async_client ${ASYNC_SOURCES})
 add_executable(bond_request_to_json ${JSON_SOURCES})
 
 target_link_libraries(bond_request gpr grpc grpc++ flatbuffers quantra_grpc QuantLib Threads::Threads cpp_client)
-target_link_libraries(async_client gpr grpc grpc++ flatbuffers quantra_grpc QuantLib Threads::Threads)
+# target_link_libraries(async_client gpr grpc grpc++ flatbuffers quantra_grpc QuantLib Threads::Threads)
 target_link_libraries(bond_request_to_json gpr grpc grpc++ flatbuffers quantra_grpc QuantLib Threads::Threads)
