Restructured Docker/build structure

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,5 @@
+# Examples CMakeLists.txt
 include_directories(
-	/root/grpc/install/include	
     ${CMAKE_SOURCE_DIR}/grpc
     ${CMAKE_SOURCE_DIR}/parser 
     ${CMAKE_SOURCE_DIR}/flatbuffers/fbs 
@@ -32,12 +32,11 @@ file(GLOB BOND_REQUEST_SORUCES
     ./bond_request_example.cpp)
 
 find_package(Threads REQUIRED)
-link_directories(/root/grpc/install/lib/)
 
 add_executable(bond_request ${BOND_REQUEST_SORUCES})
 add_executable(async_client ${ASYNC_SOURCES})
 add_executable(bond_request_to_json ${JSON_SOURCES})
 
-target_link_libraries(bond_request gpr grpc grpc++ flatbuffers quantra_grpc QuantLib Threads::Threads cpp_client)
-target_link_libraries(async_client gpr grpc grpc++ flatbuffers quantra_grpc QuantLib Threads::Threads)
-target_link_libraries(bond_request_to_json gpr grpc grpc++ flatbuffers quantra_grpc QuantLib Threads::Threads)
+target_link_libraries(bond_request ${GRPC_ALL_LIBS} flatbuffers quantra_grpc QuantLib Threads::Threads cpp_client)
+target_link_libraries(async_client ${GRPC_ALL_LIBS} flatbuffers quantra_grpc QuantLib Threads::Threads)
+target_link_libraries(bond_request_to_json ${GRPC_ALL_LIBS} flatbuffers quantra_grpc QuantLib Threads::Threads)
