--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,16 +1,14 @@
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/cpp
-	/root/grpc/install/include
-    ${CMAKE_SOURCE_DIR}/flatbuffers/cpp
+# Client CMakeLists.txt
+include_directories(
     ${CMAKE_SOURCE_DIR}/grpc
-    ${CMAKE_SOURCE_DIR}/examples/data
+    ${CMAKE_SOURCE_DIR}/parser
+    ${CMAKE_SOURCE_DIR}/flatbuffers/fbs
     ${CMAKE_SOURCE_DIR}/request
     ${CMAKE_SOURCE_DIR}/common
-    ${CMAKE_SOURCE_DIR}/parser)
+    cpp)
 
-file(GLOB CPP_CLIENT_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/cpp/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/cpp/*.h)
-
-find_package(Threads REQUIRED)
-link_directories(/root/grpc/install/lib/)
+file(GLOB CPP_CLIENT_SOURCES cpp/*.cpp)
 
 add_library(cpp_client STATIC ${CPP_CLIENT_SOURCES})
-target_link_libraries(cpp_client gpr grpc grpc++ flatbuffers quantra_grpc QuantLib Threads::Threads)
+
+target_link_libraries(cpp_client ${GRPC_ALL_LIBS} flatbuffers quantra_grpc QuantLib)
