--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,5 +23,9 @@
         }
     },
     "forwardPorts": [50051],
-    "postCreateCommand": "echo 'Dev container ready! Use build.sh to compile.'"
+    "postCreateCommand": "echo 'Dev container ready! Use build.sh to compile.'",
+    "runArgs": [
+        "--cap-add=SYS_PTRACE",
+        "--security-opt", "seccomp=unconfined"
+    ]
 }
