--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,5 @@
-# Examples CMakeLists.txt
 include_directories(
+	/root/grpc/install/include	
     ${CMAKE_SOURCE_DIR}/grpc
     ${CMAKE_SOURCE_DIR}/parser 
     ${CMAKE_SOURCE_DIR}/flatbuffers/fbs 
@@ -31,12 +31,40 @@ file(GLOB BOND_REQUEST_SORUCES
     ./messages.cpp
     ./bond_request_example.cpp)
 
+# NEW: Swap client sources
+file(GLOB SWAP_CLIENT_SOURCES
+    ${CMAKE_SOURCE_DIR}/parser/*.cpp
+    ${CMAKE_SOURCE_DIR}/common/*.cpp
+    ${CMAKE_SOURCE_DIR}/request/*.cpp  
+    ./messages.cpp
+    data/vanilla_swap_request_fbs.cpp
+    ./swap_client.cpp)
+
 find_package(Threads REQUIRED)
+link_directories(/root/grpc/install/lib/ /opt/quantra-deps/lib/)
+
+# Abseil libraries needed for gRPC 1.60+
+set(ABSL_LIBS
+    absl_synchronization
+    absl_base
+    absl_raw_logging_internal
+    absl_log_severity
+    absl_spinlock_wait
+    absl_malloc_internal
+    absl_time
+    absl_time_zone
+    absl_int128
+    absl_strings
+    absl_strings_internal
+    absl_throw_delegate
+)
 
 add_executable(bond_request ${BOND_REQUEST_SORUCES})
 add_executable(async_client ${ASYNC_SOURCES})
 add_executable(bond_request_to_json ${JSON_SOURCES})
+add_executable(swap_client ${SWAP_CLIENT_SOURCES})
 
-target_link_libraries(bond_request ${GRPC_ALL_LIBS} flatbuffers quantra_grpc QuantLib Threads::Threads cpp_client)
-target_link_libraries(async_client ${GRPC_ALL_LIBS} flatbuffers quantra_grpc QuantLib Threads::Threads)
-target_link_libraries(bond_request_to_json ${GRPC_ALL_LIBS} flatbuffers quantra_grpc QuantLib Threads::Threads)
+target_link_libraries(bond_request gpr grpc grpc++ flatbuffers quantra_grpc QuantLib Threads::Threads cpp_client ${ABSL_LIBS})
+target_link_libraries(async_client gpr grpc grpc++ flatbuffers quantra_grpc QuantLib Threads::Threads ${ABSL_LIBS})
+target_link_libraries(bond_request_to_json gpr grpc grpc++ flatbuffers quantra_grpc QuantLib Threads::Threads ${ABSL_LIBS})
+target_link_libraries(swap_client gpr grpc grpc++ flatbuffers quantra_grpc QuantLib Threads::Threads ${ABSL_LIBS})
