Added json tests

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -1,28 +1,36 @@
-# Client CMakeLists.txt
-# 
-# The Quantra client is now header-only (quantra_client.h)
-# This CMakeLists sets up an INTERFACE library for consumers
+# =============================================================================
+# Quantra C++ Client Library
+# =============================================================================
 
+# Include directories
 include_directories(
     ${CMAKE_SOURCE_DIR}/grpc
     ${CMAKE_SOURCE_DIR}/flatbuffers/fbs
     ${CMAKE_SOURCE_DIR}/flatbuffers/cpp
-    ${CMAKE_SOURCE_DIR}/client/cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/cpp/include
 )
 
-# Create an INTERFACE library (header-only)
-add_library(quantra_client INTERFACE)
-
-target_include_directories(quantra_client INTERFACE
-    ${CMAKE_SOURCE_DIR}/grpc
-    ${CMAKE_SOURCE_DIR}/flatbuffers/fbs
-    ${CMAKE_SOURCE_DIR}/flatbuffers/cpp
-    ${CMAKE_SOURCE_DIR}/client/cpp
+# -----------------------------------------------------------------------------
+# Library: quantra_client (STATIC)
+# -----------------------------------------------------------------------------
+add_library(quantra_client STATIC
+    cpp/src/json_parser.cpp
+    cpp/src/quantra_client.cpp
 )
 
-# Link dependencies that consumers will need
-target_link_libraries(quantra_client INTERFACE
-    ${GRPC_ALL_LIBS}
-    flatbuffers
-    quantra_grpc
+target_include_directories(quantra_client
+    PUBLIC
+        ${CMAKE_CURRENT_SOURCE_DIR}/cpp/include
+        ${CMAKE_SOURCE_DIR}/flatbuffers/cpp
+        ${CMAKE_SOURCE_DIR}/grpc
 )
+
+target_link_libraries(quantra_client
+    PUBLIC
+        quantra_grpc
+        flatbuffers
+        ${GRPC_ALL_LIBS}
+)
+
+# C++17 required
+target_compile_features(quantra_client PUBLIC cxx_std_17)
