--- a/jsonserver/CMakeLists.txt
+++ b/jsonserver/CMakeLists.txt
@@ -1,19 +1,26 @@
+# JSON Server CMake configuration
+# Builds the HTTP/JSON API server that fronts the gRPC pricing engine
+
 include_directories(
     ${CMAKE_SOURCE_DIR}/grpc
     ${CMAKE_SOURCE_DIR}/flatbuffers/fbs 
     ${CMAKE_SOURCE_DIR}/flatbuffers/cpp
-    ${CMAKE_SOURCE_DIR}/client/cpp
+    ${CMAKE_SOURCE_DIR}/client/cpp/include
 )
 
 find_package(Boost COMPONENTS system REQUIRED)
 
+# -----------------------------------------------------------------------------
+# JSON Server - Uses quantra_client library
+# -----------------------------------------------------------------------------
 add_executable(json_server server.cpp)
-
-target_compile_definitions(json_server PRIVATE CROW_USE_BOOST=1)
-
 target_link_libraries(json_server 
+    quantra_client
     quantra_grpc
     flatbuffers 
-    ${GRPC_ALL_LIBS}
+    grpc++
+    grpc
+    gpr
     ${Boost_LIBRARIES}
+    pthread
 )
